--- a/setup.cfg
+++ b/setup.cfg
@@ -16,7 +16,7 @@ long_description_content_type = text/markdown
 
 [options]
 package_dir =
-    = src
+    = src/search_demo
 packages = find:
 python_requires = >=3.6
 
