--- a/setup.cfg
+++ b/setup.cfg
@@ -11,7 +11,7 @@ url = https://github.com/snus-kin/search-demo
 #     Bug Tracker = https://github.com/pypa/sampleproject/issues
 classifiers =
     Programming Language :: Python :: 3
-    License :: GPL v3
+    License :: OSI Approved :: GNU General Public License v3 (GPLv3) 
     Operating System :: OS Independent
 
 [options]
